--- a/style.css
+++ b/style.css
@@ -59,9 +59,29 @@ h2{
     font-family: 'Courier New', Courier, monospace;
 }
 
-@media (max-width: 900px){
-	.body{
-		background-repeat: none;
-		background-position:center;
-	}
+@media only screen and (max-width: 800px){
+    body{
+        background-image:url(background-plain-color-images.jpg);
+        background-repeat: repeat-x;
+        padding: 30px 0;
+        background-position:center;
+        background-size:cover;
+        font-family:sans-serif;
+        margin-top:50px;
+    }
+
+    .container{
+        text-align: center;
+        color:ghostwhite;
+        margin-top:20px;
+        font-size:100px;
+    }
+
+    .calculator{ 
+        border: 3px solid #13695d;
+        background-color: aliceblue;
+        padding: 10px;
+        border-radius: 20px;
+        display: inline-block;
+    }
 }
